--- a/src/Presentation/Nop.Web/Themes/Mobile/Content/styles.css
+++ b/src/Presentation/Nop.Web/Themes/Mobile/Content/styles.css
@@ -573,7 +573,6 @@
 
 /* FORUM TOPIC */
 .forum-topic-page{}
-.forum-topic-page .manage{}
 .forum-topic-page .topic-header{}
 .forum-topic-page .topic-header .topic-options,.topic-footer .topic-options{}
 .forum-topic-page .topic-header .topic-options a,.topic-footer .topic-options a{}
